2.3/4conf_ingress_tls.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netology-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
    - host: cicd-tools.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-nginx
                port:
                  name: nginx
  tls:
    - hosts:
      - cicd-tools.ru
    - secretName: ci-cd-tools-certs
